--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    app.mySweetParam: 'nerding out on Symfony is fun'
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +30,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Mailer\Emailer:
+        arguments:
+            $mySweetParam: "%app.mySweetParam%"
+            $logger: '@logger'
+            $someService: '@App\Service\SomeService'
